versions/v2.11/modules/en/pages/installation-and-upgrade/best-practices/resources.adoc
= Other Resources
:page-languages: [en, zh]
:revdate: 2025-05-10
:page-revdate: {revdate}
:page-community-path: reference-guides/best-practices/index.adoc 
:page-product-path: installation-and-upgrade/best-practices/resources.adoc
ifeval::["{build-type}" != "community"]
:xref-security-overview: xref:security/security-overview.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-security-overview: xref:reference-guides/rancher-security/index.adoc
endif::[]

The purpose of this section is to consolidate best practices for Rancher implementations. This also includes recommendations for related technologies, such as Kubernetes, Docker, containers, and more. The objective is to improve the outcome of a Rancher implementation using the operational experience of Rancher and its customers.

If you have any questions about how these might apply to your use case, please contact your Customer Success Manager or Support.

Use the navigation bar on the left to find the current best practices for managing and deploying the Rancher Server.

For more guidance on best practices, you can consult these resources:

* {xref-security-overview}[Security]
* https://www.suse.com/c/rancherblog/[Rancher Blog]
* https://forums.rancher.com/[Rancher Forum]
* https://slack.rancher.io/[Rancher Users Slack]
* https://www.youtube.com/channel/UCh5Xtp82q8wjijP8npkVTBA/featured[Rancher Labs YouTube Channel - Online Meetups, Demos, Training, and Webinars]
